--- a/cadastro.html
+++ b/cadastro.html
@@ -6,37 +6,40 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Crise dos Quinze</title>
+  <title>Facebook</title>
   
   <!-- Bootstrap core CSS -->
   <link href="dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
-<body style="background-color:#FFFFFF " >
+<body style="background-color:#d8dfea " >
 
 
 	<!-- Seu código vai aqui! -->
-  <nav class="navbar navbar-expand-lg navbar-light" style="background-color:#1E90FF">
-    <h2 class="text-center" style="font-family: harrington"></h2>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="container">
-      <form>
-        <div class="form-row">
-          <div class="form-group col-md-6">
-            <label for="inputEmail4">Email ou telefone</label>
-            <input type="email" class="form-control" id="inputEmail4">
-          </div>
-          <div class="form-group col-md-6">
-            <label for="inputPassword4">Senha</label>
-            <input type="password" class="form-control" id="inputPassword4">
-            <button type="submit" class="btn btn-primary mb-2">Entar</button>
-          </div>
-        </div>
-      </form>
-      </div>
-    </nav>
+  <nav class="navbar navbar-light" style="background-color:  #3b5998">
+    <p style="color:#FFFFFF ;font-size: 55px;font-family:Aharoni ; text-align: center; width: 550px">facebook</p>
+  <form class="form-inline">
+    <div class="row">
+      <div class="col">
+      <label for="inputEmail" style="color:#FFFFFF" >Email ou Telefone</label>
+      <input type="email" >
+    </div>
+    <div class="col">
+      <label for="inputPassword" style="color:#FFFFFF">Senha</label>
+      <input type="password">
+    </div>
+    <div class="col">
+      <a href=""><button type="submit" style="background-color: #3b5998;font-size: 15px; color:#FFFFFF">Entar</button></a>
+    </div>
+    </div>
+  </form>
+</nav>
+<div class="container-fluid">
+  <p ><h3>O Facebook ajuda você a se conectar e</h3></p>
+  <p><h3>compartilhar com as pessoas que fazem parte</h3></p>
+  <p><h3>da sua vida.</h3></p>
+  <img src="img/rede.png" style="height: 230px;">
+</div>
 
 
 
