--- a/paginainicial.html
+++ b/paginainicial.html
@@ -14,20 +14,61 @@
 
 <body style="background-color: #FFFAFA">
 
- 
-  <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #3A5FCD;">
-    <div class="container">
-    <img src="img/logo.png" style="width: 80px; border-radius: 200px;">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <input class="form-control mr-sm-2">
-</div>
+  <nav class="navbar navbar-expand-lg" style="background: #27408B">
+    <div class="row align-items-center" style="margin-right: 0; margin-left: 0; padding-right: 0; padding-left: 0;">
+    <div class="col">
+      <a class="navbar-brand" href="paginainicial.html" style="color: white;"><img src="img/logo.png" style="width: 60px; height: 50px;"></a>
+    </div>
+    <div class="col-md5">
+      <div class="input-group">
+        <input type="text" class="form-control" placeholder="Pesquisar" >
+        <div class="input-group-append">
+          <span class="input-group-text"><i class="fas fa-search"></i></span>
+        </div>
+      </div>
+    </div>
+    <div class="redondo">
+      <img src="img/usuario.png" style="width: 50px; height: 50px; border-radius: 200%;">
+    </div>
+    <div class="col">
+      <a href="" style="color: white;"><p>Usuário</p></a>
+    </div>
+    <div class="col">
+      <a href="" style="color: white;"><p>Página inicial</p></a>
+    </div>
+    <div class="col">
+      <a href="" style="color: white;"><p>Criar</p></a>
+    </div>
+    <div class="col">
+      <a href=""><img src="img/solicitação.png" style="width: 50px; height: 50px; border-radius: 200%;"></a>
+    </div>
+    </div>
+
+  </nav>
+
+
+    
+      <div class="row">
+        <div class="col-sm">
+          <a href=""><img src="img/usuario.png" style="width: 20px; height: 20px;"><p>lalala lalala</p></a>
+        </div>
+        <div class="col-sm">
+          One of three columns
+        </div>
+        <div class="col-sm">
+          One of three columns
+        </div>
+        <div class="col-sm">
+          One of three columns
+        </div>
+      </div>
+   
+
 
 
   
 
-  </nav>
+
 </body>
 </html>
 
