--- a/paginainicial.html
+++ b/paginainicial.html
@@ -12,7 +12,8 @@
   <link href="dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
-<body style="background-color: #FFFAFA">
+<body style="background-color: #D8DFEA">
+
 
   <nav class="navbar navbar-expand-lg" style="background: #27408B">
     <div class="row align-items-center" style="margin-right: 0; margin-left: 0; padding-right: 0; padding-left: 0;">
@@ -46,27 +47,33 @@
 
   </nav>
 
+  <div class="row">
 
-    
-      <div class="row">
-        <div class="col-sm">
-          <a href=""><img src="img/usuario.png" style="width: 20px; height: 20px;"><p>lalala lalala</p></a>
-        </div>
-        <div class="col-sm">
-          One of three columns
-        </div>
-        <div class="col-sm">
-          One of three columns
-        </div>
-        <div class="col-sm">
-          One of three columns
-        </div>
-      </div>
-   
+    <div class="col" style="height: 100px;">
+      <ul class="list-groupm list-groupm-flush">
+        <a href="paginainicial"><img src="img/feed.png"></a>
+        <br>
+        <a href="paginainicial"><img src="img/messenger.png"></a>
+        <br>
+        <a href="paginainicial"><img src="img/atalhos.png"></a>
+        <br>
+        <a href="paginainicial"><img src="img/harry.png"></a>
+        <br>
+        <a href="paginainicial"><img src="img/eventos.png"></a>
+        <br>
+        <a href="paginainicial"><img src="img/grupos.png"></a>
+        <br>
+        <a href="paginainicial"><img src="img/pagina.png"></a>
+        <br>
+        <a href="paginainicial"><img src="img/messenger.png"></a>
+        <br>
+        <a href="paginainicial"><img src="img/campanhas.png"></a>
+        <br>
+        <a href="paginainicial"><img src="img/lista.png"></a>
+      </ul>
+    </div>
 
-
-
-  
+  </div>
 
 
 </body>
