--- a/paginainicial.html
+++ b/paginainicial.html
@@ -47,6 +47,7 @@
 
   </nav>
 
+  <div class="containers">
   <div class="row">
 
     <div class="col" style="height: 100px;">
@@ -63,16 +64,63 @@
         <br>
         <a href="paginainicial"><img src="img/grupos.png"></a>
         <br>
-        <a href="paginainicial"><img src="img/pagina.png"></a>
-        <br>
-        <a href="paginainicial"><img src="img/messenger.png"></a>
+        <a href="paginainicial"><img src="img/paginas.png"></a>
         <br>
         <a href="paginainicial"><img src="img/campanhas.png"></a>
         <br>
+        <a href="paginainicial"><img src="img/lembranças.png"></a>
+        <br>
         <a href="paginainicial"><img src="img/lista.png"></a>
+        <br>
+        <a href="paginainicial"><img src="img/salvos.png"></a>
+        <br>
+        <a href="paginainicial"><img src="img/recomendaçoes.png"></a>
+        <br>
+        <a href="paginainicial"><img src="img/fpaginas.png"></a>
+        <br>
+        <a href="paginainicial"><img src="img/links.png"></a>
+        <br>
+        <a href="paginainicial"><img src="img/jogos.png"></a>
+        <br>
+        <a href="paginainicial"><img src="img/video.png"></a>
+        <br>
+        <a href="paginainicial"><img src="img/ofertas.png"></a>
+        <br>
+        <a href="paginainicial"><img src="img/memories.png"></a>
+        <br>
+        <a href="paginainicial"><img src="img/recursos.png"></a>
+        <br>
+        <a href="paginainicial"><img src="img/criar.png"></a>
+        <br>
+        <a href="paginainicial"><img src="img/encontrar.png"></a>
+        <br>
+        <a href="paginainicial"><img src="img/atividades.png"></a>
+        <br>
+        <a href="paginainicial"><img src="img/empregos.png"></a>
+        <br>
+        <a href="paginainicial"><img src="img/gcompras.png"></a>
+        <br>
+        <a href="paginainicial"><img src="img/clima.png"></a>
+        <br>
+
+        <div class="row">
+          <div class="card">
+            <div class="card-header">
+              <a href="paginainicial"><img src="img/pub1.png"></a>
+            </div>
+            <div class="card-body">
+              <a href="paginainicial"><img src="img/img1.jpg"></a>
+            </div>
+          </div>
+        </div>
+
+
+
+
+        <br>
       </ul>
     </div>
-
+    </div>
   </div>
 
 
