Signed-off-by: juliafraga28 <ju.sfraga2808@gmail.com>

--- a/esqueceu.html
+++ b/esqueceu.html
@@ -12,25 +12,32 @@
   <link href="dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
-<body style="background-color:#d8dfea " >
+<body style="background: linear-gradient(white,#D3D8E8);">
 
 
 	<!-- Seu código vai aqui! -->
-  <nav class="navbar navbar-light" style="background-color:  #3b5998">
-    <p style="color:#FFFFFF ;font-size: 55px;font-family:Aharoni ; text-align: center; width: 550px">facebook</p>
-  <form class="form-inline">
+  <nav class="navbar navbar-light" style="background-color:#3b5998;">
+
+<div class="container">
+   <p style="color: #FFFFFF; font-size:50px; font-family: Arial; text-align: center; "><b>facebook</b></p>
+
+   <form class="form-inline">
     <div class="row">
-      <div class="col">
-      <label for="inputEmail" style="color:#FFFFFF" >Email ou Telefone</label>
-      <input type="email" arial-label="Search" style="width: 215px;">
+      <div class="col" style="padding: 5px;"><p style="color: #FFFFFF;  font-size:15px; ">Email ou telefone</p>
+       <input  type="email" aria-label="Search" style="width: 200px; height:25px;">
+     </div>
+
+     <div class="col" style="padding: 5px;">
+      <p style="color: #FFFFFF;  font-size:15px;">Senha</p>
+      <input type="password" aria-label="Search" style="width: 200px; height:25px;">
+      <a href="esqueceu.html"><p style="color:#afbdd4 ; font-size:15px; ">Esqueceu a conta?</p></a>
     </div>
-    <div class="col">
-      <label for="inputPassword" style="color:#FFFFFF">Senha</label>
-      <input type="email" arial-label="Search" style="width: 215px;">
-      <a href=""><p style="color: #afbdd4; font-size: 15px;">Esqueceu a conta ?</p></a>
-    </div>
-    </div>
-  </form>
+  </div>
+  <div class="col">
+    <a href=""><button type="button" class="btn btn-secondary btn-sm" style="background-color:#104E8B;">Entrar</button></a>
+  </div>
+</form> 
+</div>
 </nav>
 <br>
 <div class="col sm-1">
