Signed-off-by: juliafraga28 <ju.sfraga2808@gmail.com>

--- a/cadastro.html
+++ b/cadastro.html
@@ -16,43 +16,43 @@
 
   <nav class="navbar navbar-light" style="background-color:#3b5998;">
 
-<div class="container">
-   <p style="color: #FFFFFF; font-size:50px; font-family: Arial; text-align: center; "><b>facebook</b></p>
+    <div class="container">
+     <p style="color: #FFFFFF; font-size:50px; font-family: Arial; text-align: center; "><b>facebook</b></p>
 
-   <form class="form-inline">
-    <div class="row">
-      <div class="col" style="padding: 5px;"><p style="color: #FFFFFF;  font-size:15px; ">Email ou telefone</p>
-       <input  type="email" aria-label="Search" style="width: 200px; height:25px;">
-     </div>
+     <form class="form-inline">
+      <div class="row">
+        <div class="col" style="padding: 5px;"><p style="color: #FFFFFF;  font-size:15px; ">Email ou telefone</p>
+         <input  type="email" aria-label="Search" style="width: 200px; height:25px;">
+       </div>
 
-     <div class="col" style="padding: 5px;">
-      <p style="color: #FFFFFF;  font-size:15px;">Senha</p>
-      <input type="password" aria-label="Search" style="width: 200px; height:25px;">
-      <a href="esqueceu.html"><p style="color:#afbdd4 ; font-size:15px; ">Esqueceu a conta?</p></a>
+       <div class="col" style="padding: 5px;">
+        <p style="color: #FFFFFF;  font-size:15px;">Senha</p>
+        <input type="password" aria-label="Search" style="width: 200px; height:25px;">
+        <a href="esqueceu.html"><p style="color:#afbdd4 ; font-size:15px; ">Esqueceu a conta?</p></a>
+      </div>
     </div>
-  </div>
-  <div class="col">
-    <a href=""><button type="button" class="btn btn-secondary btn-sm" style="background-color:#104E8B;">Entrar</button></a>
-  </div>
-</form> 
+    <div class="col">
+    <a href="paginainicial.html"><button type="button" class="btn btn-secondary btn-sm" style="background-color: #104E8B">Entrar</button></a>
+    </div>
+  </form> 
 </div>
 </nav>
 
 <div class="container-fluid">
-<div class="row" >
-  <div class="col"> </div>
+  <div class="row" >
+    <div class="col"> </div>
     <div class="col">
       <p><h4>O Facebook ajuda você a se conectar e
-      compartilhar com as pessoas que fazem parte
+        compartilhar com as pessoas que fazem parte
       da sua vida.</h4></p>
-     
-     <img src="img/rede.png" style="height: 210px; padding: 5px;">
-   </div>
+
+      <img src="img/rede.png" style="height: 220px; padding: 5px;">
+    </div>
     <div class="col" style="align-self: right;">
       <div class="col"> 
-    <h2>Abra uma conta</h2>
-    <h6>É gratuito e sempre será.</h6>
-    </div>
+        <h2>Abra uma conta</h2>
+        <h6>É gratuito e sempre será.</h6>
+      </div>
 
       <form style="padding: 4px;">
         <div class="form-row">
@@ -279,42 +279,51 @@
           </div>
         </form>
       </div>
+      <br>
       <div class="col"> </div>
       <div class="container-fluid" style="background-color: #ffffff; text-align: center;">
         <div class="col"> </div>
-        <a href="" style="color:#3b5998; font-size: 15px;">
-        Português (Brasil)   English (US)   Español    Français (France)Italiano  Deutschال  عربيةह  िन्दी  中文(简体)  日本語</a>
+        <a href="" style="color:#3b5998; font-size: 15px;">Português (Brasil)</a>
+        <a href="" style="color:#3b5998; font-size: 15px;"> English (US)</a>   
+        <a href="" style="color:#3b5998; font-size: 15px;">Española </a>    
+        <a href="" style="color:#3b5998; font-size: 15px;">Français (France)</a>
+        <a href="" style="color:#3b5998; font-size: 15px;"> Italiano</a> 
+        <a href="" style="color:#3b5998; font-size: 15px;">Deutschا</a>
+        <a href="" style="color:#3b5998; font-size: 15px;">ل  عربيةह</a>  
+        <a href="" style="color:#3b5998; font-size: 15px;">िन्दी </a> 
+        <a href="" style="color:#3b5998; font-size: 15px;">中文(简体) </a> 
+        <a href="" style="color:#3b5998; font-size: 15px;">日本語</a>
 
-       <hr style="width: 1000px;">
-       <div class="col"> </div>
-       <a href="" style="color:#3b5998;font-size: 15px ">Inscreva-se</a>
-       <a href="" style="color:#3b5998;font-size: 15px ">Entrar</a>
-       <a href="" style="color:#3b5998; font-size: 15px">Messenger</a>
-       <a href="" style="color:#3b5998; font-size: 15px">Facebook Lite</a>
-       <a href="" style="color:#3b5998; font-size: 15px">Celular</a>
-       <a href="" style="color:#3b5998; font-size: 15px">Encontrar amigos</a>
-       <a href="" style="color:#3b5998; font-size: 15px">Pessoas</a>
-       <a href="" style="color:#3b5998; font-size: 15px">Páginas</a>
-       <a href="" style="color:#3b5998; font-size: 15px">Video Interests</a>
-       <a href="" style="color:#3b5998; font-size: 15px">Locais</a>
-       <a href="" style="color:#3b5998; font-size: 15px">Jogos</a>
-       <a href="" style="color:#3b5998; font-size: 15px">Locais</a>
-       <a href="" style="color:#3b5998; font-size: 15px">Marketplace</a>
-       <br>
-       <a href="" style="color:#3b5998;font-size: 15px">Grupos</a>
-       <a href="" style="color:#3b5998;font-size: 15px ">Instagram</a>
-       <a href="" style="color:#3b5998; font-size: 15px">Local</a>
-       <a href="" style="color:#3b5998; font-size: 15px">Sobre</a>
-       <a href="" style="color:#3b5998; font-size: 15px">Criar anúncio</a>
-       <a href="" style="color:#3b5998; font-size: 15px">Criar Página</a>
-       <a href="" style="color:#3b5998; font-size: 15px">Desenvolvedores</a>
-       <a href="" style="color:#3b5998; font-size: 15px">Carreiras</a>
-       <a href="" style="color:#3b5998; font-size: 15px">Privacidade</a>
-       <a href="" style="color:#3b5998; font-size: 15px">Cookies</a>
-       <a href="" style="color:#3b5998; font-size: 15px">Opções de anúncio</a>
-       <a href="" style="color:#3b5998; font-size: 15px">Termos</a>
-       <a href="" style="color:#3b5998; font-size: 15px">Ajuda</a>
-       </div>
+        <hr style="width: 1000px;">
+        <div class="col"> </div>
+        <a href="https://pt-br.facebook.com/r.php" style="color:#3b5998;font-size: 15px ">Inscreva-se</a>
+        <a href="https://pt-br.facebook.com/login/" style="color:#3b5998;font-size: 15px ">Entrar</a>
+        <a href="https://www.messenger.com/" style="color:#3b5998; font-size: 15px">Messenger</a>
+        <a href="https://pt-br.facebook.com/lite/" style="color:#3b5998; font-size: 15px">Facebook Lite</a>
+        <a href="https://pt-br.facebook.com/mobile/?ref=pf" style="color:#3b5998; font-size: 15px">Celular</a>
+        <a href="https://www.facebook.com/login.php?next=https%3A%2F%2Fwww.facebook.com%2Ffriends%2Frequests%2F%3Ffcref%3Dffi" style="color:#3b5998; font-size: 15px">Encontrar amigos</a>
+        <a href="https://www.facebook.com/directory/people_sizes/" style="color:#3b5998; font-size: 15px">Pessoas</a>
+        <a href="https://www.facebook.com/directory/pages/" style="color:#3b5998; font-size: 15px">Páginas</a>
+        <a href="https://www.facebook.com/directory/videos/interests/" style="color:#3b5998; font-size: 15px">Video Interests</a>
+        <a href="https://www.facebook.com/places/" style="color:#3b5998; font-size: 15px">Locais</a>
+        <a href="https://www.facebook.com/games/" style="color:#3b5998; font-size: 15px">Jogos</a>
+        <a href="https://www.facebook.com/directory/places/" style="color:#3b5998; font-size: 15px">Locais</a>
+        <a href="https://www.facebook.com/directory/marketplace/" style="color:#3b5998; font-size: 15px">Marketplace</a>
+        <br>
+        <a href="https://www.facebook.com/directory/groups/" style="color:#3b5998;font-size: 15px">Grupos</a>
+        <a href="https://www.instagram.com/" style="color:#3b5998;font-size: 15px ">Instagram</a>
+        <a href="https://www.facebook.com/local/lists/245019872666104/" style="color:#3b5998; font-size: 15px">Local</a>
+        <a href="https://www.facebook.com/facebook" style="color:#3b5998; font-size: 15px">Sobre</a>
+        <a href="https://www.facebook.com/login.php?next=https%3A%2F%2Fwww.facebook.com%2Fads%2Fcreate%2F%3Fcampaign_id%3D402047449186%26placement%3Dpflo%26extra_1%3Dnot-admgr-user" style="color:#3b5998; font-size: 15px">Criar anúncio</a>
+        <a href="https://www.facebook.com/pages/creation/?ref_type=sitefooter" style="color:#3b5998; font-size: 15px">Criar Página</a>
+        <a href="https://developers.facebook.com/?ref=pf" style="color:#3b5998; font-size: 15px">Desenvolvedores</a>
+        <a href="https://www.facebook.com/careers/?ref=pf" style="color:#3b5998; font-size: 15px">Carreiras</a>
+        <a href="https://www.facebook.com/privacy/explanation" style="color:#3b5998; font-size: 15px">Privacidade</a>
+        <a href="https://www.facebook.com/policies/cookies/" style="color:#3b5998; font-size: 15px">Cookies</a>
+        <a href="https://www.facebook.com/help/568137493302217" style="color:#3b5998; font-size: 15px">Opções de anúncio</a>
+        <a href="https://www.facebook.com/policies?ref=pf" style="color:#3b5998; font-size: 15px">Termos</a>
+        <a href="https://www.facebook.com/help/?ref=pf" style="color:#3b5998; font-size: 15px">Ajuda</a>
+      </div>
     </div>
   </div>
 
