--- a/paginacerta.html
+++ b/paginacerta.html
@@ -280,21 +280,17 @@
 			        <div class="card-body">
 			            <p class="card-title titulos">Stories</p>
 			            <p class="card-text mb-0 letra"><img src="img/usuario.png" style="width: 8%; height: 8%; border-radius: 50%;"> 
-			            nome de alguem </p>
-			            <p class=" titulos mt-0 ">12 horas atras</p>
-
+			             Júlia com acento</p>
+			            <p class=" titulos mt-0 ">1 horas atras</p>
 			            <p class="card-text mb-0 letra"><img src="img/usuario.png" style="width: 8%; height: 8%; border-radius: 50%;">
-			            nome de alguem</p>
+			            Laysa e Júlia</p>
 			            <p class="titulos mt-0 ">8 horas atras</p>
-
 			            <p class="card-text mb-0 letra"><img src="img/usuario.png" style="width: 8%; height: 8%; border-radius: 50%;"> 
-			            nome de alguem</p>
-			            <p class="titulos mt-0 ">6 horas atras</p>
-
+			            Laysa e Júlia</p>
+			            <p class="titulos mt-0 ">23 horas atras</p>
 			            <p class="card-text mb-0 letra"><img src="img/usuario.png" style="width: 8%; height: 8%; border-radius: 50%;"> 
-			            nome de alguem</p>
-			            <p class="titulos mt-0 ">2 horas atras</p>
-			             
+			            Laysa e Júlia</p>
+			            <p class="titulos mt-0 ">14 horas atras</p>
 			            <p class="card-text mb-0 letra">
 			            Ver mais</p>
 			        </div>
